redo home page upgrades to be more flowy and remove asset display
